# tsbootstrap

./: .all-contributorsrc  .bumpversion.cfg  .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tsbootstrap_config.example.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_NOTES.md  README.md  TSFIT_BACKEND_FEATURE_GAP_ANALYSIS.md  asv.conf.json  ci_logs.txt  clustering_sampler.py  codecov.yml  context7.json  llms.txt  pyproject.toml  pytest.ini  pytest_wrapper.py  refactoring-plan-182.md  refactoring-plan-183.md  refactoring-plan-184.md  refactoring-plan-185.md  refactoring-plan-186.md  release-please-config.json  report.xml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_tests.sh  scratchfile.txt  server.json  setup.py  (+7 more)
.binder/: postBuild
.claude_correlation/: history.jsonl
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/hooks/: sync-docs-requirements.py
.github/scripts/: update_requirements.py
.github/workflows/: CI.yml  bumpversion.yml  mcp-publish.yml  mutation.yml  osv-scanner.yml  release-branch-sync.yml  release-please.yml  release.yml  scorecard.yml  sync_requirements.yml  tests.yml
TS_BS/src/: block_generator.py  block_length_sampler.py  block_resampler.py  bootstrap.py  fracdiff.py  markov_sampler.py  time_series_model.py  time_series_simulator.py  tsfit.py
TS_BS/utils/: odds_and_ends.py
benchmarks/: README.md  _timing.py  bench_bootstrap.py  bench_vs_arch.py  compare_vs_arch.py  plot_launch.py  plot_mem.py
benchmarks/results/: cache_counters_ccx33_2026-07-11.json  membench_2026-07-04.json  vs_arch_ccx33_2026-07-05.json  vs_arch_ccx33_2026-07-11.json  vs_arch_ccx33_2026-07-11_settled.json
docs/: requirements.txt
docs/architecture/: DESIGN_DECISIONS.md
docs/development/: exog_arimax_varx_plan.md  migration_to_0.2.0.md
docs/examples/: auto_model_usage.py
docs/migration/: statsforecast_migration_plan.md  tsfit-removal-guide.md
docs/source/: adapters_guide.rst  api_adapters.rst  api_bootstrap.rst  api_diagnostics.rst  api_errors.rst  api_methods.rst  api_results.rst  api_uq.rst  base_bootstrap.rst  base_bootstrap_configs.rst  block_bootstrap.rst  block_bootstrap_configs.rst  block_generator.rst  block_length_sampler.rst  block_resampler.rst  bootstrap.rst  conf.py  diagnostics_guide.rst  index.rst  markov_sampler.rst  methods_guide.rst  odds_and_ends.rst  quickstart.rst  ranklags.rst  results_guide.rst  time_series_model.rst  time_series_simulator.rst  tsfit.rst  types.rst  uq_guide.rst  validate.rst  whats_new_0_3_0.rst  whats_new_0_4_0.rst
examples/: backend_configuration_example.py  bootstrap_with_sktime.ipynb  getting_started.ipynb  performance_comparison_notebook.py
extension_templates/: bootstrap.py
future_work/: clustering_sampler.py  hac_sampler.py  markov_sampler.py  numba_base.py  odds_and_ends.py  scratchfile.txt  spectral.py  test_bootstrap_numba.py  test_clustering_sampler.py  test_hac_sampler.py  test_markov_sampler.py  utils.py
profiling/: README.md  cprofile_run.py  hotpaths.py  line_profile_run.py  memory_run.py  run_all.py  scalene_target.py  workloads.py
scripts/: check_lock_version.py  coverage_per_file.py  install-hooks.sh  sonar-local.sh
src/: block_generator.py  block_length_sampler.py  block_resampler.py  bootstrap.py  bootstrap_config.py  bootstrap_numba.py  bootstrap_orig.py  fracdiff.py  markov_sampler.py  time_series_model.py  time_series_simulator.py  tsfit.py  tsmodels.py
src/ts_bs/: __init__.py  base_bootstrap.py  base_bootstrap_configs.py  block_bootstrap.py  block_bootstrap_configs.py  block_generator.py  block_length_sampler.py  block_resampler.py  bootstrap.py  bootstrap_configs.py  markov_sampler.py  ranklags.py  time_series_model.py  time_series_simulator.py  tsfit.py
src/tsbootstrap/: __init__.py  api.py  async_bootstrap.py  async_bootstrap_implementations.py  base_bootstrap.py  base_bootstrap_configs.py  base_mixins.py  batch_bootstrap.py  block_bootstrap.py  block_bootstrap_configs.py  block_generator.py  block_length_sampler.py  block_resampler.py  bootstrap.py  bootstrap_common.py  bootstrap_ext.py  bootstrap_factory.py  bootstrap_intermediate.py  bootstrap_mixins.py  bootstrap_types.py  common_fields.py  diagnostics.py  dispatch.py  errors.py  markov_sampler.py  mcp.py  metadata.py  methods.py  prng_keys.py  py.typed  ranklags.py  results.py  rng.py  sklearn_integration.py  time_series_model.py  time_series_model_sklearn.py  time_series_simulator.py  tsfit.py  tsfit_compat.py  validation.py  (+2 more)
tests/: README.md  _nopytest_tests.py  conftest.py  mutation_equivalents.md  test_async_bootstrap.py  test_async_bootstrap_coverage.py  test_async_services.py  test_auto_order_selector.py  test_auto_order_selector_legacy.py  test_backend_services.py  test_base_bootstrap.py  test_base_bootstrap_configs.py  test_base_bootstrap_coverage.py  test_base_mixins.py  test_best_lag.py  test_block_bootstrap.py  test_block_bootstrap_configs.py  test_block_bootstrap_services.py  test_block_generator.py  test_block_length_sampler.py  test_block_resampler.py  test_bootstrap.py  test_bootstrap_common.py  test_bootstrap_configs.py  test_bootstrap_ext.py  test_bootstrap_ext_enhanced.py  test_bootstrap_ext_hypothesis.py  test_bootstrap_factory.py  test_bootstrap_numba.py  test_bootstrap_services.py  test_dependencies.py  test_estimator_checks.py  test_markov_sampler.py  test_numba_base.py  test_numpy_serialization.py  test_numpy_serialization_enhanced.py  test_numpy_serialization_hypothesis.py  test_odds_and_ends.py  test_phase1_feature_parity.py  test_phase1_integration.py  (+14 more)
tests/_helpers/: dgp.py
tests/property/: test_coverage.py  (+6 more)
tools/: gen_test_impact.py  mutation_allowlist.txt  mutation_test_impact.json  run_mutation_gate.py
utils/: block_length_sampler.py  logger.py  markov_sampler.py  numba_base.py  odds_and_ends.py  tsfit.py  tsmodels.py  types.py  validate.py
(+198 files in other folders)
