[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tsbootstrap"
version = "0.2.0.dev0"
description = "A Python package to generate bootstrapped time series"
maintainers = [
    { name = "Sankalp Gilda", email = "sankalp.gilda@gmail.com" },
    { name = "Franz Kiraly", email = "franz.kiraly@sktime.net"},
    { name = "Benedikt Heidrich", email = "benedikt.heidrich@sktime.net"},
]
authors = [
    { name = "Sankalp Gilda", email = "sankalp.gilda@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "scikit-base",  # base class for the sktime/skbase adapters
    "narwhals",  # DataFrame boundary: accept pandas/Polars/PyArrow frames
]

[project.optional-dependencies]

# Model-based bootstraps (AR / ARIMA / VAR / sieve) fit with statsmodels.
models = [
    "statsmodels",
]

# Out-of-bag uncertainty quantification (EnbPI) needs an estimator interface.
uq = [
    "scikit-learn",
]

# Profiling harness to find hot paths / suboptimal spots. See profiling/README.md.
profile = [
    "scalene",
    "line_profiler",
    "memory_profiler",
    "py-spy",
    "snakeviz",
]

docs = [
    "furo",
    "jupyter",
    "myst-parser",
    "nbsphinx>=0.8.6",
    "numpydoc",
    "pydata-sphinx-theme",
    "Sphinx!=7.2.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design<0.6.0",
    "sphinx-gallery<0.15.0",
    "sphinx-issues<4.0.0",
    "sphinx-version-warning",
    "tabulate>=0.9.0",
]

dev = [
    "black>=24.3.0",
    "blacken-docs",
    "hypothesis",
    "pre-commit",
    "pytest",
    "pytest-xdist[psutil]",
    "pytest-cov",
    "pytest-mock",
    "sktime",  # validates the skbase/sktime adapter discovery + check_estimator
    "polars",  # exercises the narwhals DataFrame boundary with a second backend
    "statsmodels",  # model-based methods under test
    "arch",  # reference cross-check for PWSD and the block bootstrap
    "pandas",  # narwhals boundary tests
    "scikit-learn",  # UQ (EnbPI) tests
    "asv",  # performance benchmark suite
    "github-actions",
    "importlib-metadata",
    "pip-tools",
    "pyright",
    "ruff",
    "autoflake",
    "typos",
    "tox",
    "tox-gh-actions",
    "pycobertura",
    "tomlkit",
    "memory-profiler>=0.60.0",  # For performance testing
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -n auto --dist loadscope --max-worker-restart 3 --durations=20"
testpaths = [
    "tests",
]
markers = [
    "optional_deps: marks tests that require optional dependencies (automatically applied)",
    "core: marks tests that only require core dependencies (automatically applied)",
    "smoke: marks tests for smoke testing core functionality",
    "anyio: marks tests that use anyio for async testing",
    "slow: marks tests that are slow on Windows due to numerical computation performance",
    "ci_performance: marks performance tests that are flaky in CI due to runner variability",
    "performance: marks tests as performance benchmarks",
    "integration: marks tests as integration tests",
    "network: marks tests as requiring network access",
    "cloud: marks tests as requiring cloud resources",
    "gpu: marks tests as requiring GPU",
]
filterwarnings = [
    # Ignore pkg_resources deprecation warnings from fs package (via statsforecast → fugue → triad → fs)
    # This is a known issue with setuptools >= 81 and the fs package hasn't updated yet
    # Engineering principle: Clean test output is non-negotiable
    "ignore:pkg_resources is deprecated.*:DeprecationWarning:fs",
    "ignore:pkg_resources is deprecated.*:UserWarning:fs",
    # Also ignore from pkg_resources itself
    "ignore:Deprecated call to.*:DeprecationWarning:pkg_resources",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
target-version = 'py310'
line-length = 100  # Must agree with Black

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
    "YTT", # flake8-2020
]

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]

ignore = [
    "B905",  # zip strict=true; remove once python <3.10 support is dropped.
    "C901",  # function is too complex; overly strict
    "UP006",  # Use `list` instead of `List` for type annotation (3.9+ style)
    "UP007",  # Use `X | Y` for type annotations (3.10+ only)
    "UP035",  # Import from `collections.abc` instead of `typing` (3.9+ style)
    "UP037",  # Remove quotes from type annotation (3.9+ style)
    "UP038",  # Use `X | Y` in isinstance (3.10+ only)
    "UP039",  # Unnecessary parentheses after not (3.9+ style)
    "UP040",  # Type alias should use TypeAlias (3.10+ only)
    "UP045",  # Use `X | None` for type annotations (3.10+ only)
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",  # line length handled by black
    "N802",  # Function name should be lowercase; overly strict
    "N803",  # Argument name should be lowercase; overly strict
    "N806",  # Variable in function should be lowercase; overly strict
    "N816",  # Variable in class scope should not be mixedCase; overly strict
    "PGH003",  # Use of "eval"; overly strict
    "SIM115",  # open-file-with-context-handler; overly strict
    "TRY003",  # Avoid specifying messages outside exception class; overly strict, especially for ValueError
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`; overly strict
    "UP007", # Use `X | Y` for type annotationsRuffUP007; overly strict
    "UP006", # Use `list` instead of `List` for type annotations; overly strict
    "UP035", # `typing.List` is deprecated, use `list` instead; overly strict
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []


[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "chr",
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",  # use of "assert"
    "S102",  # use of "exec"
    "S106",  # possible hardcoded password.
    "PGH001",  # use of "eval"
]

[tool.ruff.lint.pep8-naming]
staticmethod-decorators = [
    "pydantic.validator",
    "pydantic.root_validator",
]

[tool.interrogate]
ignore_init_module = true
ignore_init_class = true
ignore_magic = true
ignore_semiprivate = true
ignore_private = true
ignore_nested_functions = true
ignore_nested_classes = true
ignore_imports = false
exclude = [".venv/*", "tests/*", "docs/*", "build/*", "dist/*", "src/tsbootstrap/__init__.py"]



[tool.coverage.run]
source = ['src/']
omit = ['tests/*', '.venv/*']

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache", "build", "dist", ".venv", "venv"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportPrivateUsage = false
reportImportCycles = true
reportUnnecessaryIsInstance = true
stubPath = "typings"
venvPath = "."
venv = ".venv"
